Fix for the layout problems.

--- a/jake-kit.css
+++ b/jake-kit.css
@@ -15,6 +15,7 @@
 }
 
 .Jake-Kit-HBox > * {
+	display: inline;
 	float: left;
 }
 
